--- a/00-prep/lab/2-SMACSS-practice/starter-code/styles/style.css
+++ b/00-prep/lab/2-SMACSS-practice/starter-code/styles/style.css
@@ -56,7 +56,7 @@ hr {
   clear: both;
   border: 0;
   height: 13px;
-  background-image: url('img/hr-img.gif');
+  background-image: url('../img/hr.png');
 }
 
 h2 {
